Fix circular injection